# sorting-performance-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
data/: input1e4.txt
include/: exec-time.h  file-io.h  sorting-algo.h
src/: exec-time.cpp  file-io.cpp  main.cpp  sorting-algo.cpp
